Changed favAlerts function. Made some text changes to home.html

--- a/home.html
+++ b/home.html
@@ -16,9 +16,9 @@
 	</nav>
 
 	<content>
-		<h1>Hello World</h1>
-		<!-- insert hello world here -->
-		<p>Welcome to my site. What you do on this page will echo in the halls of the server farm.</p>
+		<h1>Welcome to this little website.</h1>
+		<p>Hello World</p>
+		<p>Please, make yourself at home. What you do on this page will echo in the halls of the server farm.</p>
 		<ul>
 			<li>You have a great name.</li>
 			<li>That gladius is to-die-for</li>
